Доработка testcpp: - Перенос 'main.cpp' в 'src/main.cpp' - Добавление CMakeLists.txt в корень проекта и папку src

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # ignore ALL files in ANY directory named ".vscode"
 .vscode/
 
-# ignore ALL files in ANY directory named ".bin"
+# ignore ALL files in ANY directory named "bin"
 bin/
+
+# ignore ALL files in ANY directory named "build"
+build/
